baler: html - remove requirejs dependency.
Change-Id: I87e95702ab02b3a0fe3cf03c574a6c8aaca500f5

--- a/baler/src/bhttpd/html/heatmap_test.html
+++ b/baler/src/bhttpd/html/heatmap_test.html
@@ -2,10 +2,14 @@
 <head>
 <title>Baler Heatmap Test</title>
 <link rel="stylesheet" type="text/css" href="css/baler.css">
-<script data-main="js/heatmap_test.js" src="js/lib/require.js"></script>
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/baler_config.js"></script>
+<script src="js/lazy_html.js"></script>
+<script src="js/baler.js"></script>
 </head>
 <body>
 <p id="paragraph">This is a heatmap widget test.</p>
 <div id="test"></div>
+<script src="js/heatmap_test.js"></script>
 </body>
 </html>
