--- a/baler/src/bhttpd/html/ptn_test.html
+++ b/baler/src/bhttpd/html/ptn_test.html
@@ -2,10 +2,14 @@
 <head>
 <title>Baler Pattern Test</title>
 <link rel="stylesheet" type="text/css" href="css/baler.css">
-<script data-main="js/ptn_test.js" src="js/lib/require.js"></script>
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/baler_config.js"></script>
+<script src="js/lazy_html.js"></script>
+<script src="js/baler.js"></script>
 </head>
 <body>
 <p id="paragraph">This is a pattern widget test.</p>
 <div id="test"></div>
+<script src="js/ptn_test.js"></script>
 </body>
 </html>
