baler: html and coffee update and bug fixes.
Change-Id: I7a1c3557bd73c19d66263f88e528ba8c01dae44a

--- a/baler/src/bhttpd/html/ptn_test.html
+++ b/baler/src/bhttpd/html/ptn_test.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <p id="paragraph">This is a pattern widget test.</p>
-<div id="test"></div>
+<div>Message pattern</div>
+<div id="test0"></div>
+<div>Metric pattern</div>
+<div id="test1"></div>
 <script src="js/ptn_test.js"></script>
 </body>
 </html>
