baler: baler.cofee - add MetaCluster* widget
- Add MetaClusterStat widget
- Add MetaClusterCtrl widget
- Add style for MetaClusterCtrl and MetaClusterStat
- Add example code to use MetaClusterCtrl in ptn_test

Change-Id: I2450bc2b0b00e98fbd61045c0d1dbd96165e6665

--- a/baler/src/bhttpd/html/ptn_test.html
+++ b/baler/src/bhttpd/html/ptn_test.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <p id="paragraph">This is a pattern widget test.</p>
+<div>Control</div>
+<div id="ctrl"></div>
 <div>Message pattern</div>
 <div id="test0"></div>
 <div>Metric pattern</div>
